--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 
     <div class="header">
         <div class="top_bar">
-            <button class="knowledge">knowledge</button>
-            <button class="projects">projects</button>
-            <button class="login">login</button>
+            <a href="#"><div class="knowledge">Knowledge</div></a>
+            <a href="#"><div class="projects">Projects</div></a>
+            <a href="login/login.html"><div class="login">Login</div></a>
         </div>
+    </div>
+    <div class="container">
         <div class="title">This is a site</div>
+        <div>Hello World!</div>
     </div>
 
     <script src='index.js'></script>
