finish exit button login

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="top_bar">
             <a href="#"><div class="knowledge">Knowledge</div></a>
             <a href="#"><div class="projects">Projects</div></a>
+            <div class="spacer"></div>
             <a href="login/login.html"><div class="login">Login</div></a>
         </div>
     </div>
