--- a/login/login.html
+++ b/login/login.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <a href="../index.html"><div class="back">
-        <div class="line_1"></div>>
-        <div class="line_2"></div>>
+        <div class="line_1"></div>
+        <div class="line_2"></div>
     </div></a>
     <div class="login">
         <div class="header">
